--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -1,2 +1,5 @@
 # MongoDB
-spring.data.mongodb.uri=mongodb://admin:admin@country-service-db:27017/playgrounddb?authSource=admin&authMechanism=SCRAM-SHA-1
+spring.data.mongodb.host=localhost
+
+# Zipkin
+spring.zipkin.enabled=false
